--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Columns of Cards</title>
+  <title>Featured Books</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+<img src="images/placeholder-2by3.svg" alt="">
+<h1>The Quest for Anderon</h1>
+Tabatha R. Barrett
+<p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+<a>Read now</a>
 </body>
 </html>
