--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <div class="Barrett">
 <img src="images/placeholder-2by3.svg" alt="">
 <h1>The Quest for Anderon</h1>
 Tabatha R. Barrett
 <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-<a>Read now</a>
+<a href=""></a>Read now</a>
+</div>
+<div class="Hedegaard">
+<img src="images/placeholder-2by3.svg" alt="">
+<h1>The Quest for Anderon</h1>
+Tabatha R. Barrett
+<p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+<a href=""></a>Read now</a>
+</div>
+<div class="Cejkova">
+<img src="images/placeholder-2by3.svg" alt="">
+<h1>The Quest for Anderon</h1>
+Tabatha R. Barrett
+<p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+<a href=""></a>Read now</a>
+</div>
+<div class="Olivarez">
+<img src="images/placeholder-2by3.svg" alt="">
+<h1>The Quest for Anderon</h1>
+Tabatha R. Barrett
+<p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+<a href=""></a>Read now</a>
+</div>
 </body>
 </html>
