Add all the things

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <h1> Featured Books </h1>
   <div class="Barrett">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Quest for Anderon</h2>
@@ -17,7 +18,7 @@
   <div class="Hedegaard">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Dinosaur Knights</h2>
-    Thomas S. Hedegaard
+    <p class="italic">Thomas S. Hedegaard</p>
     <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
     <a href=""></a>Read now</a>
   </div>
