--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <h2>The Quest for Anderon</h2>
     <p class="italic">Tabatha R. Barrett</p>
     <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-    <a href=""></a>Read now</a>
+    <a href="">Read now</a>
   </div>
   <div class="Hedegaard">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Dinosaur Knights</h2>
     <p class="italic">Thomas S. Hedegaard</p>
     <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-    <a href=""></a>Read now</a>
+    <a href="">Read now</a>
   </div>
   <div class="Cejkova">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Black Dragon</h2>
     <p class="italic">Hana Cejkova</p>
     <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-    <a href=""></a>Read now</a>
+    <a href="">Read now</a>
   </div>
   <div class="Olivarez">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Light Speed Laser Ships</h2>
     <p class="italic">Felicity Orta Olivarez</p>
     <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-    <a href=""></a>Read now</a>
+    <a href="">Read now</a>
   </div>
 </body>
 </html>
