--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
   <h1> Featured Books </h1>
-  <div class="Barrett">
+  <div class="barrett">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Quest for Anderon</h2>
     <p class="italic">Tabatha R. Barrett</p>
     <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
     <a href="">Read now</a>
   </div>
-  <div class="Hedegaard">
+  <div class="hedegaard">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Dinosaur Knights</h2>
     <p class="italic">Thomas S. Hedegaard</p>
     <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
     <a href="">Read now</a>
   </div>
-  <div class="Cejkova">
+  <div class="cejkova">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Black Dragon</h2>
     <p class="italic">Hana Cejkova</p>
     <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
     <a href="">Read now</a>
   </div>
-  <div class="Olivarez">
+  <div class="olivarez">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Light Speed Laser Ships</h2>
     <p class="italic">Felicity Orta Olivarez</p>
