--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <div class="cejkova">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Black Dragon</h2>
-    <p class="italic">Hana Cejkova</p>
+    <p class="italic">Hana Čejková</p>
     <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
     <a href="">Read now</a>
   </div>
   <div class="olivarez">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Light Speed Laser Ships</h2>
-    <p class="italic">Felicity Orta Olivarez</p>
+    <p class="italic">Felicity Orta Olivárez</p>
     <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
     <a href="">Read now</a>
   </div>
