--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
   <div class="barrett">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Quest for Anderon</h2>
-    <p class="italic">Tabatha R. Barrett</p>
+    <h3>Tabatha R. Barrett</h3>
     <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
     <a href="">Read now</a>
   </div>
   <div class="hedegaard">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Dinosaur Knights</h2>
-    <p class="italic">Thomas S. Hedegaard</p>
+    <h3>Thomas S. Hedegaard</h3>
     <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
     <a href="">Read now</a>
   </div>
   <div class="cejkova">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Black Dragon</h2>
-    <p class="italic">Hana Čejková</p>
+    <h3>Hana Čejková</h3>
     <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
     <a href="">Read now</a>
   </div>
   <div class="olivarez">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>Light Speed Laser Ships</h2>
-    <p class="italic">Felicity Orta Olivárez</p>
+    <h3>Felicity Orta Olivárez</h3>
     <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
     <a href="">Read now</a>
   </div>
