--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<section>
+  <header>
   <h1> Featured Books </h1>
+</header>
   <div class="barrett">
     <img src="images/placeholder-2by3.svg" alt="">
     <h2>The Quest for Anderon</h2>
@@ -37,5 +40,6 @@
     <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
     <a href="">Read now</a>
   </div>
+</section>
 </body>
 </html>
